<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <android.support.v7.widget.CardView
        xmlns:card_view="http://schemas.android.com/apk/res-auto"
        android:id="@+id/card_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_margin="@dimen/cardView_margin"
        card_view:cardCornerRadius="@dimen/cardview_default_radius"
        card_view:cardElevation="@dimen/cardElevation">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/image_of_place"
                style="@style/photoLocation"
                android:contentDescription="@string/image_location"
                android:src="@drawable/gamba" />

            <TextView
                android:id="@+id/title_text_view"
                style="@style/titleTextView"
                android:text="@string/title_of_location" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/image_of_place"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/description"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:maxLines="3"
                    android:padding="@dimen/padding_10dp"
                    android:text="@string/museum_example" />

                <LinearLayout
                    android:id="@+id/horizontal_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:orientation="horizontal"
                    android:padding="@dimen/padding_10dp">

                    <TextView
                        android:id="@+id/address_text_view"
                        style="@style/contactsTextStyle"
                        android:text="@string/address_text" />

                    <TextView
                        android:id="@+id/open_hours_text_view"
                        style="@style/contactsTextStyle"
                        android:text="@string/hours_text"
                        android:textAllCaps="true" />

                    <TextView
                        android:id="@+id/price_text_view"
                        style="@style/contactsTextStyle.price"
                        android:text="@string/price_text" />

                </LinearLayout>

            </LinearLayout>

        </RelativeLayout>

    </android.support.v7.widget.CardView>

</LinearLayout>