<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/app_bar_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fitsSystemWindows="true"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

        <android.support.design.widget.CollapsingToolbarLayout
            android:id="@+id/collapsing_toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fitsSystemWindows="true"
            app:contentScrim="?attr/colorPrimary"
            app:expandedTitleMarginEnd="64dp"
            app:expandedTitleMarginStart="48dp"
            app:layout_scrollFlags="scroll|exitUntilCollapsed">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:contentDescription="@string/museum_description"
                android:fitsSystemWindows="true"
                android:scaleType="centerInside"
                android:src="@drawable/caixaforum"
                app:layout_collapseMode="parallax" />

        </android.support.design.widget.CollapsingToolbarLayout>

    </android.support.design.widget.AppBarLayout>

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:clipToPadding="false"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_10dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/location_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/padding_10dp"
                android:text="@string/museum_title"
                android:textSize="@dimen/textTitle"
                android:textStyle="bold" />

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/divider_height"
                android:background="@color/lightGray" />

            <TextView
                android:id="@+id/location_about"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/padding_10dp"
                android:text="@string/museum_description" />

            <TextView
                android:id="@+id/location_contacts"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/padding_10dp"
                android:text="@string/contacts_text"
                android:textStyle="bold"
                android:textAllCaps="true"
                android:textColor="@color/lightGray" />

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/divider_height"
                android:layout_marginBottom="@dimen/margin_6dp"
                android:background="@color/lightGray" />

            <TextView
                android:id="@+id/address_text_view"
                style="@style/contactsTextStyle.detail"
                android:padding="@dimen/padding_10dp"
                android:text="@string/museum_address" />

            <TextView
                android:id="@+id/open_hours_text_view"
                style="@style/contactsTextStyle.detail"
                android:padding="@dimen/padding_10dp"
                android:text="@string/museum_hours"
                android:textAllCaps="true" />

            <TextView
                android:id="@+id/price_text_view"
                style="@style/contactsTextStyle.detail"
                android:padding="@dimen/padding_10dp"
                android:text="@string/museum_price" />

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/divider_height"
                android:layout_marginBottom="@dimen/margin_6dp"
                android:background="@color/lightGray" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:scaleType="centerCrop"
                android:layout_margin="10dp"
                android:contentDescription="@string/map_of_city"
                />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/margin_6dp"
                android:padding="@dimen/padding_10dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="@dimen/width_0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:drawablePadding="@dimen/drawablePadding"
                    android:gravity="center"
                    android:text="@string/navigation_text" />

                <TextView
                    android:layout_width="@dimen/width_0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:drawablePadding="@dimen/drawablePadding"
                    android:gravity="center"
                    android:text="@string/web_text" />

                <TextView
                    android:layout_width="@dimen/width_0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:drawablePadding="@dimen/drawablePadding"
                    android:gravity="center"
                    android:text="@string/share_text" />
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/divider_height"
                android:layout_marginBottom="@dimen/margin_6dp"
                android:background="@color/lightGray" />

        </LinearLayout>

    </android.support.v4.widget.NestedScrollView>


</android.support.design.widget.CoordinatorLayout>
